@@ -36,6 +36,7 @@ libepc_headers = \
 	libepc/consumer.h \
 	libepc/dispatcher.h \
 	libepc/marshal.h \
+	libepc/protocol.h \
 	libepc/publisher.h \
 	libepc/service-type.h \
 	libepc/shell.h \
@@ -56,6 +57,7 @@ libepc_libepc_la_SOURCES = \
 	libepc/dispatcher.c \
 	libepc/enums.c \
 	libepc/marshal.c \
+	libepc/protocol.c \
 	libepc/publisher.c \
 	libepc/service-type.c \
 	libepc/shell.c \
